# ROS_L6470

./: CMakeLists.txt  README.md  main.cpp  package.xml
angular-electron/: main.js  package-lock.json  package.json
angular-electron/src/: index.html
angular-electron/src/app/: app.component.html  app.module.ts  config.service.ts  config.ts  fake-config.ts  fake-motors.ts  motor.service.spec.ts  motor.service.ts  motor.ts
angular-electron/src/app/messages/: messages.component.css  messages.component.html
angular-electron/src/app/motor-config/: motor-config.component.html  motor-config.component.spec.ts  motor-config.component.ts
angular-electron/src/app/motor-control/: motor-control.component.html  motor-control.component.spec.ts  motor-control.component.ts
angular-electron/src/app/motor-detail/: motor-detail.component.html  motor-detail.component.spec.ts  motor-detail.component.ts
angular-electron/src/app/motors/: motors.component.css  motors.component.html  motors.component.ts
angular-electron/src/app/progress-component/: progress-component.component.css  progress-component.component.html  progress-component.component.spec.ts  progress-component.component.ts
angular-electron/src/app/ros-config/: ros-config.component.html  ros-config.component.spec.ts  ros-config.component.ts
angular-electron/src/app/system-overview/: system-overview.component.html
angular-electron/src/assets/css/: gauge.css
angular-electron/src/assets/js/ros_js/: subscriptions.js
angular-gui/: .angular-cli.json  README.md  main.js  package-lock.json  package.json
angular-gui/src/: index.html
deploy-utils/: re  robot.bash  robot.sh  sys
driver/: SparkFunAutoDriver.cpp  SparkFunAutoDriver.h  SparkFundSPINConstants.h  commands.cpp  commands.h  comms.cpp  config.cpp  constants.cpp  constants.h  driver.cpp  driver.h  l640_test  l640_test.cpp  makefile  motor.cpp  motor.h  mraa_test.cpp  multidriver.cpp  multidriver.h  support.cpp  types.cpp  types.h
driver/single_driver/: mraa_test.cpp
gui/: index.html  install.txt  main.js  package-lock.json  package.json  run.sh
gui/css/: led.css
gui/js/: gauge.js
gui/ros_interface/: build_nodejs_interfaces.sh  generate_ros_l6470_interfaces.js
joyproxy/: joyproxy_py.py  package.xml  setup.cfg  setup.py
joyproxy_cpp/: CMakeLists.txt  joyproxy_main.cpp  joyproxy_node.cpp  joyproxy_node.hpp  package.xml
joyproxy_cpp/launch/: joyproxy_main_launch.py
l6470_driver/: CMakeLists.txt  commands.cpp  support.h  types.cpp
l6470_driver/single_driver/: l640_test.cpp  makefile  mraa_test
msg/: CMakeLists.txt  ManualSpeed  Planner.msg  package.xml
msg/msg/: ManualSpeed.msg  MultiPose.msg  MultiStatus.msg  Plan.msg  Planner.msg  Pose.msg  Status.msg
node/: CMakeLists.txt  l6470_main.cpp  l6470_node.cpp  l6470_node.hpp  package.xml
node/configs/: motor1.cfg  motor2.cfg
node/l6470_driver/: CMakeLists.txt  abstractdriver.h  basedriver.cpp  basedriver.h  commands.cpp  commands.h  commsdriver.cpp  commsdriver.h  config.cpp  config.h  driverfactory.cpp  driverfactory.h  l6470driver.cpp  l6470driver.h  l6472driver.cpp  l6472driver.h  motor.cpp  motor.h  multidriver.h  powerstepdriver.cpp  powerstepdriver.h  simdriver.cpp  simdriver.h  types.cpp  types.h
node/l6470_driver/old/: comms.cpp  config.cpp  multidriver.cpp
node/l6470_driver/single_driver/: commands.cpp
node/l6470_driver/test/: CMakeLists.txt  command_unit_test.cpp  config_unit_test.cpp  generate_config.cpp  l6470_test.cpp  stepper_motor_test.cpp  stop_motor.cpp  test_configs.cpp  test_main.cpp
src/: CMakeLists.txt  l6470_node.cpp  l6470_node.hpp  main.cpp  package.xml
src/l6470_driver/: commands.cpp  support.cpp
src/l6470_driver/test/: l640_test.cpp
srv/: CMakeLists.txt  GoSpeed.srv  GoToPosition.srv  GoTrajectory.srv  Stop.srv  package.xml
srv/srv/: GoToPosition.srv  GoTrajectory.srv  Stop.srv  StopAll.srv
test_client/: l6470_client.py  package.xml  setup.py
